# v2-question-generator

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MANUAL_INTEGRACION.md  README.md  __main__.py  cleanup.py  debug_generate.py  debug_patch.py  generate_demo.py  pyproject.toml  requirements.txt  result.txt  result2.txt  test_extrapolation.py  test_generation_redundancy.py  tester_lmstudio.py
docs/: ARCHITECTURE.md
examples/: quick_start.py
prompts/cloze/: metadata.json  v1.0.md
prompts/flashcard/: metadata.json  v1.0.md  v2.0.md
prompts/multiple_choice/: metadata.json  v1.0.md  v2.0.md
prompts/true_false/: metadata.json  v1.0.md  v2.0.md
scripts/: enrich_questions_with_author.py
src/: __init__.py
src/application/: __init__.py
src/application/ports/: __init__.py
src/application/use_cases/: __init__.py  classify_sections.py  extract_sections.py  generate_questions.py  run_pipeline.py  validate_questions.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  batch.py  document.py  question.py  section.py
src/domain/exceptions/: __init__.py
src/domain/services/: __init__.py
src/domain/value_objects/: __init__.py  classification.py  coordinates.py  metadata.py  origin.py
src/infrastructure/: __init__.py
src/infrastructure/classification/: __init__.py  service.py
src/infrastructure/config/: __init__.py  loader.py  settings.py
src/infrastructure/llm/: __init__.py  factory.py  service.py
src/interface/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/unit/: __init__.py
(+49 files in other folders)
